GTK4/Package_Tools/include-C/gdk/in_arbeit/gdkevents.h

#define GDK_TYPE_EVENT          (gdk_event_get_type ())
#define GDK_EVENT(obj)          (G_TYPE_CHECK_INSTANCE_CAST ((obj), GDK_TYPE_EVENT, GdkEvent))
#define GDK_IS_EVENT(obj)       (G_TYPE_CHECK_INSTANCE_TYPE ((obj), GDK_TYPE_EVENT))
#define GDK_TYPE_EVENT_SEQUENCE (gdk_event_sequence_get_type ())
#define GDK_IS_EVENT_TYPE(event, type)  (gdk_event_get_event_type ((event)) == (type))
typedef struct _GdkEventSequence        GdkEventSequence;
typedef struct _GdkEvent                GdkEvent;
typedef enum
{
  GDK_DELETE,
  GDK_MOTION_NOTIFY,
  GDK_BUTTON_PRESS,
  GDK_BUTTON_RELEASE,
  GDK_KEY_PRESS,
  GDK_KEY_RELEASE,
  GDK_ENTER_NOTIFY,
  GDK_LEAVE_NOTIFY,
  GDK_FOCUS_CHANGE,
  GDK_PROXIMITY_IN,
  GDK_PROXIMITY_OUT,
  GDK_DRAG_ENTER,
  GDK_DRAG_LEAVE,
  GDK_DRAG_MOTION,
  GDK_DROP_START,
  GDK_SCROLL,
  GDK_GRAB_BROKEN,
  GDK_TOUCH_BEGIN,
  GDK_TOUCH_UPDATE,
  GDK_TOUCH_END,
  GDK_TOUCH_CANCEL,
  GDK_TOUCHPAD_SWIPE,
  GDK_TOUCHPAD_PINCH,
  GDK_PAD_BUTTON_PRESS,
  GDK_PAD_BUTTON_RELEASE,
  GDK_PAD_RING,
  GDK_PAD_STRIP,
  GDK_PAD_GROUP_MODE,
  GDK_TOUCHPAD_HOLD,
  GDK_EVENT_LAST        
} GdkEventType;
typedef enum
{
  GDK_TOUCHPAD_GESTURE_PHASE_BEGIN,
  GDK_TOUCHPAD_GESTURE_PHASE_UPDATE,
  GDK_TOUCHPAD_GESTURE_PHASE_END,
  GDK_TOUCHPAD_GESTURE_PHASE_CANCEL
} GdkTouchpadGesturePhase;
typedef enum
{
  GDK_SCROLL_UP,
  GDK_SCROLL_DOWN,
  GDK_SCROLL_LEFT,
  GDK_SCROLL_RIGHT,
  GDK_SCROLL_SMOOTH
} GdkScrollDirection;
typedef enum
{
  GDK_SCROLL_UNIT_WHEEL,
  GDK_SCROLL_UNIT_SURFACE
} GdkScrollUnit;
typedef enum
{
  GDK_NOTIFY_ANCESTOR		= 0,
  GDK_NOTIFY_VIRTUAL		= 1,
  GDK_NOTIFY_INFERIOR		= 2,
  GDK_NOTIFY_NONLINEAR		= 3,
  GDK_NOTIFY_NONLINEAR_VIRTUAL	= 4,
  GDK_NOTIFY_UNKNOWN		= 5
} GdkNotifyType;
typedef enum
{
  GDK_CROSSING_NORMAL,
  GDK_CROSSING_GRAB,
  GDK_CROSSING_UNGRAB,
  GDK_CROSSING_GTK_GRAB,
  GDK_CROSSING_GTK_UNGRAB,
  GDK_CROSSING_STATE_CHANGED,
  GDK_CROSSING_TOUCH_BEGIN,
  GDK_CROSSING_TOUCH_END,
  GDK_CROSSING_DEVICE_SWITCH
} GdkCrossingMode;
GType                   gdk_event_get_type              (void) ;
GType                   gdk_event_sequence_get_type     (void) ;
GdkEvent *              gdk_event_ref                   (GdkEvent *event);
void                    gdk_event_unref                 (GdkEvent *event);
GdkEventType            gdk_event_get_event_type        (GdkEvent *event);
GdkSurface *            gdk_event_get_surface           (GdkEvent *event);
GdkSeat *               gdk_event_get_seat              (GdkEvent *event);
GdkDevice *             gdk_event_get_device            (GdkEvent *event);
GdkDeviceTool *         gdk_event_get_device_tool       (GdkEvent *event);
guint32                 gdk_event_get_time              (GdkEvent *event);
GdkDisplay *            gdk_event_get_display           (GdkEvent *event);
GdkEventSequence *      gdk_event_get_event_sequence    (GdkEvent *event);
GdkModifierType         gdk_event_get_modifier_state    (GdkEvent *event);
gboolean                gdk_event_get_position          (GdkEvent  *event,
					                 double	   *x,
					                 double	   *y);
gboolean                gdk_event_get_axes              (GdkEvent  *event,
                                                         double   **axes,
                                                         guint     *n_axes);
gboolean                gdk_event_get_axis              (GdkEvent   *event,
                                                         GdkAxisUse  axis_use,
                                                         double     *value);
GdkTimeCoord *          gdk_event_get_history           (GdkEvent *event,
                                                         guint    *out_n_coords);
gboolean                gdk_event_get_pointer_emulated (GdkEvent *event);
GType                   gdk_button_event_get_type       (void) ;
guint                   gdk_button_event_get_button     (GdkEvent *event);
GType                   gdk_scroll_event_get_type       (void) ;
GdkScrollDirection      gdk_scroll_event_get_direction  (GdkEvent *event);
void                    gdk_scroll_event_get_deltas     (GdkEvent *event,
                                                         double   *delta_x,
                                                         double   *delta_y);
GdkScrollUnit           gdk_scroll_event_get_unit       (GdkEvent *event);
gboolean                gdk_scroll_event_is_stop        (GdkEvent *event);
GType                   gdk_key_event_get_type          (void) ;
guint                   gdk_key_event_get_keyval        (GdkEvent *event);
guint                   gdk_key_event_get_keycode       (GdkEvent *event);
GdkModifierType         gdk_key_event_get_consumed_modifiers (GdkEvent *event);
guint                   gdk_key_event_get_layout        (GdkEvent *event);
guint                   gdk_key_event_get_level         (GdkEvent *event);
gboolean                gdk_key_event_is_modifier       (GdkEvent *event);
GType                   gdk_focus_event_get_type        (void) ;
gboolean                gdk_focus_event_get_in          (GdkEvent *event);
GType                   gdk_touch_event_get_type        (void) ;
gboolean                gdk_touch_event_get_emulating_pointer (GdkEvent *event);
GType                   gdk_crossing_event_get_type     (void) ;
GdkCrossingMode         gdk_crossing_event_get_mode     (GdkEvent *event);
GdkNotifyType           gdk_crossing_event_get_detail   (GdkEvent *event);
gboolean                gdk_crossing_event_get_focus    (GdkEvent *event);
GType                   gdk_touchpad_event_get_type     (void) ;
GdkTouchpadGesturePhase
                        gdk_touchpad_event_get_gesture_phase (GdkEvent *event);
guint                   gdk_touchpad_event_get_n_fingers     (GdkEvent *event);
void                    gdk_touchpad_event_get_deltas        (GdkEvent *event,
                                                              double   *dx,
                                                              double   *dy);
double                  gdk_touchpad_event_get_pinch_angle_delta (GdkEvent *event);
double                  gdk_touchpad_event_get_pinch_scale       (GdkEvent *event);
GType                   gdk_pad_event_get_type          (void) ;
guint                   gdk_pad_event_get_button        (GdkEvent *event);
void                    gdk_pad_event_get_axis_value    (GdkEvent *event,
                                                         guint    *index,
                                                         double   *value);
void                    gdk_pad_event_get_group_mode    (GdkEvent *event,
                                                         guint    *group,
                                                         guint    *mode);
GType                   gdk_dnd_event_get_type          (void) ;
GdkDrop *               gdk_dnd_event_get_drop          (GdkEvent *event);
GType                   gdk_grab_broken_event_get_type  (void) ;
GdkSurface *            gdk_grab_broken_event_get_grab_surface (GdkEvent *event);
gboolean                gdk_grab_broken_event_get_implicit     (GdkEvent *event);
GType                   gdk_motion_event_get_type       (void) ;
GType                   gdk_delete_event_get_type       (void) ;
GType                   gdk_proximity_event_get_type    (void) ;
gboolean                gdk_event_triggers_context_menu (GdkEvent *event);
gboolean                gdk_events_get_distance         (GdkEvent *event1,
                                                         GdkEvent *event2,
                                                         double   *distance);
gboolean                gdk_events_get_angle            (GdkEvent *event1,
                                                         GdkEvent *event2,
                                                         double   *angle);
gboolean                gdk_events_get_center           (GdkEvent *event1,
                                                         GdkEvent *event2,
                                                         double   *x,
                                                         double   *y);
typedef enum {
  GDK_KEY_MATCH_NONE,
  GDK_KEY_MATCH_PARTIAL,
  GDK_KEY_MATCH_EXACT
} GdkKeyMatch;
GdkKeyMatch            gdk_key_event_matches (GdkEvent        *event,
                                              guint            keyval,
                                              GdkModifierType  modifiers);
gboolean               gdk_key_event_get_match (GdkEvent        *event,
                                                guint           *keyval,
                                                GdkModifierType *modifiers);