GTK4/Package_Tools/include-C/gdk/in_arbeit/gdkevents.pp


 * Cancelled gestures may be so for a variety of reasons, due to hardware
 * or the compositor, or due to the gesture recognition layers hinting the
 * gesture did not finish resolutely (eg. a 3rd finger being added during
 * a pinch gesture). In these cases, the last event will report the phase
 * %GDK_TOUCHPAD_GESTURE_PHASE_CANCEL, this should be used as a hint
 * to undo any visible/permanent changes that were done throughout the
 * progress of the gesture.
  }
type
  PGdkTouchpadGesturePhase = ^TGdkTouchpadGesturePhase;
  TGdkTouchpadGesturePhase =  Longint;
  Const
    GDK_TOUCHPAD_GESTURE_PHASE_BEGIN = 0;
    GDK_TOUCHPAD_GESTURE_PHASE_UPDATE = 1;
    GDK_TOUCHPAD_GESTURE_PHASE_END = 2;
    GDK_TOUCHPAD_GESTURE_PHASE_CANCEL = 3;
;
{*
 * GdkScrollDirection:
 * @GDK_SCROLL_UP: the surface is scrolled up.
 * @GDK_SCROLL_DOWN: the surface is scrolled down.
 * @GDK_SCROLL_LEFT: the surface is scrolled to the left.
 * @GDK_SCROLL_RIGHT: the surface is scrolled to the right.
 * @GDK_SCROLL_SMOOTH: the scrolling is determined by the delta values
 *   in scroll events. See gdk_scroll_event_get_deltas()
 *
 * Specifies the direction for scroll events.
  }
type
  PGdkScrollDirection = ^TGdkScrollDirection;
  TGdkScrollDirection =  Longint;
  Const
    GDK_SCROLL_UP = 0;
    GDK_SCROLL_DOWN = 1;
    GDK_SCROLL_LEFT = 2;
    GDK_SCROLL_RIGHT = 3;
    GDK_SCROLL_SMOOTH = 4;
;
{*
 * GdkScrollUnit:
 * @GDK_SCROLL_UNIT_WHEEL: The delta is in number of wheel clicks.
 * @GDK_SCROLL_UNIT_SURFACE: The delta is in surface pixels to scroll directly
 *   on screen.
 *
 * Specifies the unit of scroll deltas.
 *
 * When you get %GDK_SCROLL_UNIT_WHEEL, a delta of 1.0 means 1 wheel detent
 * click in the south direction, 2.0 means 2 wheel detent clicks in the south
 * direction... This is the same logic for negative values but in the north
 * direction.
 *
 * If you get %GDK_SCROLL_UNIT_SURFACE, are managing a scrollable view and get a
 * value of 123, you have to scroll 123 surface logical pixels right if it's
 * @delta_x or down if it's @delta_y. This is the same logic for negative values
 * but you have to scroll left instead of right if it's @delta_x and up instead
 * of down if it's @delta_y.
 *
 * 1 surface logical pixel is equal to 1 real screen pixel multiplied by the
 * final scale factor of your graphical interface (the product of the desktop
 * scale factor and eventually a custom scale factor in your app).
 *
 * Since: 4.8
  }
type
  PGdkScrollUnit = ^TGdkScrollUnit;
  TGdkScrollUnit =  Longint;
  Const
    GDK_SCROLL_UNIT_WHEEL = 0;
    GDK_SCROLL_UNIT_SURFACE = 1;
;
{*
 * GdkNotifyType:
 * @GDK_NOTIFY_ANCESTOR: the surface is entered from an ancestor or
 *   left towards an ancestor.
 * @GDK_NOTIFY_VIRTUAL: the pointer moves between an ancestor and an
 *   inferior of the surface.
 * @GDK_NOTIFY_INFERIOR: the surface is entered from an inferior or
 *   left towards an inferior.
 * @GDK_NOTIFY_NONLINEAR: the surface is entered from or left towards
 *   a surface which is neither an ancestor nor an inferior.
 * @GDK_NOTIFY_NONLINEAR_VIRTUAL: the pointer moves between two surfaces
 *   which are not ancestors of each other and the surface is part of
 *   the ancestor chain between one of these surfaces and their least
 *   common ancestor.
 * @GDK_NOTIFY_UNKNOWN: an unknown type of enter/leave event occurred.
 *
 * Specifies the kind of crossing for enter and leave events.
 *
 * See the X11 protocol specification of LeaveNotify for
 * full details of crossing event generation.
  }
type
  PGdkNotifyType = ^TGdkNotifyType;
  TGdkNotifyType =  Longint;
  Const
    GDK_NOTIFY_ANCESTOR = 0;
    GDK_NOTIFY_VIRTUAL = 1;
    GDK_NOTIFY_INFERIOR = 2;
    GDK_NOTIFY_NONLINEAR = 3;
    GDK_NOTIFY_NONLINEAR_VIRTUAL = 4;
    GDK_NOTIFY_UNKNOWN = 5;
;
{*
 * GdkCrossingMode:
 * @GDK_CROSSING_NORMAL: crossing because of pointer motion.
 * @GDK_CROSSING_GRAB: crossing because a grab is activated.
 * @GDK_CROSSING_UNGRAB: crossing because a grab is deactivated.
 * @GDK_CROSSING_GTK_GRAB: crossing because a GTK grab is activated.
 * @GDK_CROSSING_GTK_UNGRAB: crossing because a GTK grab is deactivated.
 * @GDK_CROSSING_STATE_CHANGED: crossing because a GTK widget changed
 *   state (e.g. sensitivity).
 * @GDK_CROSSING_TOUCH_BEGIN: crossing because a touch sequence has begun,
 *   this event is synthetic as the pointer might have not left the surface.
 * @GDK_CROSSING_TOUCH_END: crossing because a touch sequence has ended,
 *   this event is synthetic as the pointer might have not left the surface.
 * @GDK_CROSSING_DEVICE_SWITCH: crossing because of a device switch (i.e.
 *   a mouse taking control of the pointer after a touch device), this event
 *   is synthetic as the pointer didn’t leave the surface.
 *
 * Specifies the crossing mode for enter and leave events.
  }
type
  PGdkCrossingMode = ^TGdkCrossingMode;
  TGdkCrossingMode =  Longint;
  Const
    GDK_CROSSING_NORMAL = 0;
    GDK_CROSSING_GRAB = 1;
    GDK_CROSSING_UNGRAB = 2;
    GDK_CROSSING_GTK_GRAB = 3;
    GDK_CROSSING_GTK_UNGRAB = 4;
    GDK_CROSSING_STATE_CHANGED = 5;
    GDK_CROSSING_TOUCH_BEGIN = 6;
    GDK_CROSSING_TOUCH_END = 7;
    GDK_CROSSING_DEVICE_SWITCH = 8;
;

function gdk_event_get_type:TGType;cdecl;external;
function gdk_event_sequence_get_type:TGType;cdecl;external;
function gdk_event_ref(event:PGdkEvent):PGdkEvent;cdecl;external;
procedure gdk_event_unref(event:PGdkEvent);cdecl;external;
function gdk_event_get_event_type(event:PGdkEvent):TGdkEventType;cdecl;external;
function gdk_event_get_surface(event:PGdkEvent):PGdkSurface;cdecl;external;
function gdk_event_get_seat(event:PGdkEvent):PGdkSeat;cdecl;external;
function gdk_event_get_device(event:PGdkEvent):PGdkDevice;cdecl;external;
function gdk_event_get_device_tool(event:PGdkEvent):PGdkDeviceTool;cdecl;external;
function gdk_event_get_time(event:PGdkEvent):Tguint32;cdecl;external;
function gdk_event_get_display(event:PGdkEvent):PGdkDisplay;cdecl;external;
function gdk_event_get_event_sequence(event:PGdkEvent):PGdkEventSequence;cdecl;external;
function gdk_event_get_modifier_state(event:PGdkEvent):TGdkModifierType;cdecl;external;
function gdk_event_get_position(event:PGdkEvent; x:Pdouble; y:Pdouble):Tgboolean;cdecl;external;
function gdk_event_get_axes(event:PGdkEvent; axes:PPdouble; n_axes:Pguint):Tgboolean;cdecl;external;
function gdk_event_get_axis(event:PGdkEvent; axis_use:TGdkAxisUse; value:Pdouble):Tgboolean;cdecl;external;
function gdk_event_get_history(event:PGdkEvent; out_n_coords:Pguint):PGdkTimeCoord;cdecl;external;
function gdk_event_get_pointer_emulated(event:PGdkEvent):Tgboolean;cdecl;external;
function gdk_button_event_get_type:TGType;cdecl;external;
function gdk_button_event_get_button(event:PGdkEvent):Tguint;cdecl;external;
function gdk_scroll_event_get_type:TGType;cdecl;external;
function gdk_scroll_event_get_direction(event:PGdkEvent):TGdkScrollDirection;cdecl;external;
procedure gdk_scroll_event_get_deltas(event:PGdkEvent; delta_x:Pdouble; delta_y:Pdouble);cdecl;external;
function gdk_scroll_event_get_unit(event:PGdkEvent):TGdkScrollUnit;cdecl;external;
function gdk_scroll_event_is_stop(event:PGdkEvent):Tgboolean;cdecl;external;
function gdk_key_event_get_type:TGType;cdecl;external;
function gdk_key_event_get_keyval(event:PGdkEvent):Tguint;cdecl;external;
function gdk_key_event_get_keycode(event:PGdkEvent):Tguint;cdecl;external;
function gdk_key_event_get_consumed_modifiers(event:PGdkEvent):TGdkModifierType;cdecl;external;
function gdk_key_event_get_layout(event:PGdkEvent):Tguint;cdecl;external;
function gdk_key_event_get_level(event:PGdkEvent):Tguint;cdecl;external;
function gdk_key_event_is_modifier(event:PGdkEvent):Tgboolean;cdecl;external;
function gdk_focus_event_get_type:TGType;cdecl;external;
function gdk_focus_event_get_in(event:PGdkEvent):Tgboolean;cdecl;external;
function gdk_touch_event_get_type:TGType;cdecl;external;
function gdk_touch_event_get_emulating_pointer(event:PGdkEvent):Tgboolean;cdecl;external;
function gdk_crossing_event_get_type:TGType;cdecl;external;
function gdk_crossing_event_get_mode(event:PGdkEvent):TGdkCrossingMode;cdecl;external;
function gdk_crossing_event_get_detail(event:PGdkEvent):TGdkNotifyType;cdecl;external;
function gdk_crossing_event_get_focus(event:PGdkEvent):Tgboolean;cdecl;external;
function gdk_touchpad_event_get_type:TGType;cdecl;external;
function gdk_touchpad_event_get_gesture_phase(event:PGdkEvent):TGdkTouchpadGesturePhase;cdecl;external;
function gdk_touchpad_event_get_n_fingers(event:PGdkEvent):Tguint;cdecl;external;
procedure gdk_touchpad_event_get_deltas(event:PGdkEvent; dx:Pdouble; dy:Pdouble);cdecl;external;
function gdk_touchpad_event_get_pinch_angle_delta(event:PGdkEvent):Tdouble;cdecl;external;
function gdk_touchpad_event_get_pinch_scale(event:PGdkEvent):Tdouble;cdecl;external;
function gdk_pad_event_get_type:TGType;cdecl;external;
function gdk_pad_event_get_button(event:PGdkEvent):Tguint;cdecl;external;
procedure gdk_pad_event_get_axis_value(event:PGdkEvent; index:Pguint; value:Pdouble);cdecl;external;
procedure gdk_pad_event_get_group_mode(event:PGdkEvent; group:Pguint; mode:Pguint);cdecl;external;
function gdk_dnd_event_get_type:TGType;cdecl;external;
function gdk_dnd_event_get_drop(event:PGdkEvent):PGdkDrop;cdecl;external;
function gdk_grab_broken_event_get_type:TGType;cdecl;external;
function gdk_grab_broken_event_get_grab_surface(event:PGdkEvent):PGdkSurface;cdecl;external;
function gdk_grab_broken_event_get_implicit(event:PGdkEvent):Tgboolean;cdecl;external;
function gdk_motion_event_get_type:TGType;cdecl;external;
function gdk_delete_event_get_type:TGType;cdecl;external;
function gdk_proximity_event_get_type:TGType;cdecl;external;
function gdk_event_triggers_context_menu(event:PGdkEvent):Tgboolean;cdecl;external;
function gdk_events_get_distance(event1:PGdkEvent; event2:PGdkEvent; distance:Pdouble):Tgboolean;cdecl;external;
function gdk_events_get_angle(event1:PGdkEvent; event2:PGdkEvent; angle:Pdouble):Tgboolean;cdecl;external;
function gdk_events_get_center(event1:PGdkEvent; event2:PGdkEvent; x:Pdouble; y:Pdouble):Tgboolean;cdecl;external;
{*
 * GdkKeyMatch:
 * @GDK_KEY_MATCH_NONE: The key event does not match
 * @GDK_KEY_MATCH_PARTIAL: The key event matches if keyboard state
 *   (specifically, the currently active group) is ignored
 * @GDK_KEY_MATCH_EXACT: The key event matches
 *
 * Describes how well an event matches a given keyval and modifiers.
 *
 * `GdkKeyMatch` values are returned by [method@Gdk.KeyEvent.matches].
  }
type
  PGdkKeyMatch = ^TGdkKeyMatch;
  TGdkKeyMatch =  Longint;
  Const
    GDK_KEY_MATCH_NONE = 0;
    GDK_KEY_MATCH_PARTIAL = 1;
    GDK_KEY_MATCH_EXACT = 2;
;

function gdk_key_event_matches(event:PGdkEvent; keyval:Tguint; modifiers:TGdkModifierType):TGdkKeyMatch;cdecl;external;
function gdk_key_event_get_match(event:PGdkEvent; keyval:Pguint; modifiers:PGdkModifierType):Tgboolean;cdecl;external;

implementation

{ was #define dname def_expr }
function GDK_TYPE_EVENT : longint; { return type might be wrong }
  begin
    GDK_TYPE_EVENT:=gdk_event_get_type;
  end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GDK_EVENT(obj : longint) : longint;
begin
  GDK_EVENT:=G_TYPE_CHECK_INSTANCE_CAST(obj,GDK_TYPE_EVENT,GdkEvent);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GDK_IS_EVENT(obj : longint) : longint;
begin
  GDK_IS_EVENT:=G_TYPE_CHECK_INSTANCE_TYPE(obj,GDK_TYPE_EVENT);
end;

{ was #define dname def_expr }
function GDK_TYPE_EVENT_SEQUENCE : longint; { return type might be wrong }
  begin
    GDK_TYPE_EVENT_SEQUENCE:=gdk_event_sequence_get_type;
  end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GDK_IS_EVENT_TYPE(event,_type : longint) : longint;
begin
  GDK_IS_EVENT_TYPE:=(gdk_event_get_event_type(event))=_type;
end;
